--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -4,11 +4,11 @@
 # Please see LICENSE.txt for license information.
 #
 version=${project.version}
-launcherShortname=OpenCommunity
+launcherShortname=FoxFord
 versionManifestUrl=https://launchermeta.mojang.com/mc/game/version_manifest.json
 librariesSource=https://libraries.minecraft.net/
 assetsSource=https://resources.download.minecraft.net/
 microsoftClientId=d18bb4d8-a27f-4451-a87f-fe6de4436813
-newsUrl=https://envel-nikita-gutsenkov.github.io/EnvelLauncher-data-1/news.html
-packageListUrl=https://enlar.bitbucket.io/packages.json
-selfUpdateUrl=https://envel-nikita-gutsenkov.github.io/EnvelLauncher-data-1/json/latest.json
+newsUrl=https://example.com
+packageListUrl=https://foxford.bitbucket.io/packages.json
+selfUpdateUrl=https://foxford.bitbucket.io/latest.json
