--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
@@ -3,7 +3,7 @@
 # Copyright (C) 2010-2014 Albert Pham <http://www.sk89q.com> and contributors
 # Please see LICENSE.txt for license information.
 #
-homeFolderWindows=OpenCommunity
-homeFolder=.opencommunity
+homeFolderWindows=FoxFord
+homeFolder=.foxford
 launcherClass=com.skcraft.launcher.RedditLauncher
-latestUrl=https://envel-nikita-gutsenkov.github.io/EnvelLauncher-data-1/json/latest.json
+latestUrl=https://foxford.bitbucket.io/latest.json
