--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -10,5 +10,5 @@ librariesSource=https://libraries.minecraft.net/
 assetsSource=https://resources.download.minecraft.net/
 microsoftClientId=d18bb4d8-a27f-4451-a87f-fe6de4436813
 newsUrl=https://example.com
-packageListUrl=https://foxford.bitbucket.io/packages.json
-selfUpdateUrl=https://foxford.bitbucket.io/latest.json
+packageListUrl=https://bitbucket.org/Enlar/foxford.bitbucket.io/raw/master/packages.json
+selfUpdateUrl=https://bitbucket.org/Enlar/foxford.bitbucket.io/raw/master/latest.json
