--- a/launcher-reddit/build.gradle
+++ b/launcher-reddit/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'java-library'
     id "com.github.johnrengelman.shadow"
     id 'io.freefair.lombok'
 }
@@ -15,12 +16,6 @@ repositories {
     }
 }
 
-jar {
-    manifest {
-        attributes('Main-Class': 'com.skcraft.launcher.RedditLauncher')
-    }
-}
-
 dependencies {
     implementation project(path: ':launcher', configuration: 'shadow')
     implementation 'io.github.cottonmc.insubstantial:substance:7.3.1-SNAPSHOT'
@@ -32,6 +27,21 @@ repositories {
 
 shadowJar {
     archiveClassifier.set("")
+    mergeServiceFiles()
+    manifest {
+        attributes('Main-Class': 'com.skcraft.launcher.RedditLauncher')
+        attributes('Encoding': 'UTF-8')
+    }
+    zip64 = true
+    minimize()
+
+    from('com/skcraft/launcher/lang') {
+        include '**/*.properties'
+        into 'com/skcraft/launcher/lang/'
+    }
+    from(sourceSets.main.resources) {
+        include '**/*.properties'
+    }
 }
 
 build {
