--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
@@ -6,4 +6,4 @@
 homeFolderWindows=FoxFord
 homeFolder=.foxford
 launcherClass=com.skcraft.launcher.RedditLauncher
-latestUrl=https://foxford.bitbucket.io/latest.json
+latestUrl=https://bitbucket.org/Enlar/foxford.bitbucket.io/raw/master/latest.json
