--- a/creator-tools/build.gradle
+++ b/creator-tools/build.gradle
@@ -26,6 +26,16 @@ processResources {
 
 shadowJar {
     archiveClassifier.set("")
+    mergeServiceFiles()
+    manifest {
+        attributes('Main-Class': 'com.skcraft.launcher.Launcher')
+    }
+    zip64 = true
+    minimize()
+
+    from(sourceSets.main.resources) {
+        include '**/*.properties'
+    }
 }
 
 build {
