--- a/launcher-builder/build.gradle
+++ b/launcher-builder/build.gradle
@@ -17,7 +17,18 @@ dependencies {
 shadowJar {
     dependsOn ':launcher:shadowJar'
     archiveClassifier.set("")
+    mergeServiceFiles()
+    manifest {
+        attributes('Main-Class': 'com.skcraft.launcher.Launcher')
+    }
+    zip64 = true
+    minimize()
+
+    from(sourceSets.main.resources) {
+        include '**/*.properties'
+    }
 }
+
 
 // Work around gradle shadow bug
 // see https://github.com/johnrengelman/shadow/issues/713
