--- a/launcher-fancy/build.gradle
+++ b/launcher-fancy/build.gradle
@@ -23,6 +23,16 @@ dependencies {
 shadowJar {
     dependsOn ':launcher:shadowJar'
     archiveClassifier.set("")
+    mergeServiceFiles()
+    manifest {
+        attributes('Main-Class': 'com.skcraft.launcher.Launcher')
+    }
+    zip64 = true
+    minimize()
+
+    from(sourceSets.main.resources) {
+        include '**/*.properties'
+    }
 }
 
 // Work around gradle shadow bug
