--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     api 'com.miglayout:miglayout:3.7.4'
     api 'com.google.code.findbugs:jsr305:3.0.2'
 
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'ch.qos.logback:logback-classic:1.2.9'
     implementation 'com.googlecode.plist:dd-plist:1.23'
     implementation 'net.java.dev.jna:jna-platform:5.11.0'
 }
